--- a/EvalySI_App/EvalySI_App/EvalySI_App.csproj
+++ b/EvalySI_App/EvalySI_App/EvalySI_App.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -16,18 +15,18 @@
     <None Remove="Views\ActosSalud\**" />
     <None Remove="Views\DatosGenerales\**" />
   </ItemGroup>
-<ItemGroup>
-  <Content Include="wwwroot\**">
-    <CopyToPublishDirectory>Always</CopyToPublishDirectory>
-  </Content>
-</ItemGroup>
+
+  <ItemGroup>
+    <Content Include="wwwroot/**">
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot/images/" />
   </ItemGroup>
-
 </Project>
