--- a/EvalySI_App/EvalySI_App/EvalySI_App.csproj
+++ b/EvalySI_App/EvalySI_App/EvalySI_App.csproj
@@ -3,17 +3,18 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <EnableDefaultContentItems>false</EnableDefaultContentItems>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Views\ActosSalud\**" />
-    <Compile Remove="Views\DatosGenerales\**" />
-    <Content Remove="Views\ActosSalud\**" />
-    <Content Remove="Views\DatosGenerales\**" />
-    <EmbeddedResource Remove="Views\ActosSalud\**" />
-    <EmbeddedResource Remove="Views\DatosGenerales\**" />
-    <None Remove="Views\ActosSalud\**" />
-    <None Remove="Views\DatosGenerales\**" />
+    <Compile Remove="Views\\ActosSalud\\**" />
+    <Compile Remove="Views\\DatosGenerales\\**" />
+    <Content Remove="Views\\ActosSalud\\**" />
+    <Content Remove="Views\\DatosGenerales\\**" />
+    <EmbeddedResource Remove="Views\\ActosSalud\\**" />
+    <EmbeddedResource Remove="Views\\DatosGenerales\\**" />
+    <None Remove="Views\\ActosSalud\\**" />
+    <None Remove="Views\\DatosGenerales\\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,9 +25,5 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot/images/" />
   </ItemGroup>
 </Project>
