--- a/EvalySI_App/EvalySI_App/EvalySI_App.csproj
+++ b/EvalySI_App/EvalySI_App/EvalySI_App.csproj
@@ -3,7 +3,6 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <EnableDefaultContentItems>false</EnableDefaultContentItems>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,12 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="wwwroot/**">
-      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
-    </Content>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 </Project>
